# tierflow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NIX_USAGE.md  README.md  TESTING.md  config.example.yaml  config.yaml  flake.nix  install.sh  tierflow.service  update.sh
.github/rulesets/: README.md  protect-develop.json  protect-main.json
.github/workflows/: ci.yml  nix.yml  release.yml
examples/: README.md  download-automation.yaml  exclude-patterns.yaml  plex-tautulli.yaml  simple-cache.yaml  three-tier.yaml
scripts/: prepare-release.sh
src/: cli.rs  disk.rs  error.rs  executor.rs  factory.rs  file.rs  file_checker.rs  hasher.rs  lib.rs  lock.rs  main.rs  move_blocker.rs  mover.rs  strategy.rs  tier.rs
src/balancer/: decision.rs  eviction.rs  mod.rs  plan.rs  state.rs
src/conditions/: active_window.rs  age.rs  always_true.rs  file_extension.rs  file_size.rs  filename_contains.rs  max_age.rs  mod.rs  path_prefix.rs
src/config/: blocker.rs  condition.rs  error.rs  mod.rs  strategy.rs  tautulli.rs  tier.rs
src/mover/: mod.rs  native.rs
src/stats/: mod.rs
src/tautulli/: client.rs  episode.rs  mod.rs  progress.rs  stats.rs
src/tdarr/: mod.rs
